initial port of ImageShack tool to KF5. Compile and link as well. Plugin have been renamed from ImageShack Export to ImageShack to be more generic if later, import feature is add.
TODO:
- KDE4Support still in use and must be ported to pure KF5
- Factoring must be done with new libkipiplugins API

CCMAIL: shouryasgupta@gmail.com
CCMAIL: aspotashev@gmail.com

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -409,7 +409,7 @@ if(KF5Kipi_FOUND)
 #         add_subdirectory(picasawebexport)
 #         add_subdirectory(smug)
 #         add_subdirectory(rajceexport)
-#         add_subdirectory(imageshackexport)
+        add_subdirectory(imageshack)
 #
 #         if(QCA2_FOUND)
 #             add_subdirectory(shwup)
