--- a/imageshack/kipiplugin_imageshack.desktop.cmake.in
+++ b/imageshack/kipiplugin_imageshack.desktop.cmake.in
@@ -1,6 +1,6 @@
 [Desktop Entry]
-UntranslatedGenericName=Imageshack Export
-Name=Imageshack Export
+UntranslatedGenericName=Imageshack Tool
+Name=Imageshack Tool
 Name[bs]=Imageshack Izvoz
 Name[ca]=Exportador a Imageshack
 Name[ca@valencia]=Exportador a Imageshack
@@ -29,7 +29,7 @@ Name[sl]=Izvoz v Imageshack
 Name[sv]=Export till Imageshack
 Name[tr]=Imageshack Aktarımı
 Name[uk]=Експорт до Imageshack
-Name[x-test]=xxImageshack Exportxx
+Name[x-test]=xxImageshack Toolxx
 Name[zh_TW]=Imageshack 匯出
 Comment=A tool to export images to Imageshack web service
 Comment[bs]=Alat za izvoz slika u ImageShack web servisu
@@ -64,7 +64,7 @@ Comment[zh_TW]=匯出影像到遠端 Imageshack 網頁服務的工具
 Type=Service
 Icon=kipi-imageshack
 ServiceTypes=KIPI/Plugin
-X-KDE-Library=kipiplugin_imageshackexport
+X-KDE-Library=kipiplugin_imageshack
 X-KIPI-PluginCategories=Export
 X-KIPI-BinaryVersion=${KIPI_LIB_SO_CUR_VERSION}
 author=Victor Dodon, dodonvictor at gmail dot com
