factoring dngconverter rules

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -250,10 +250,19 @@ if(KIPI_FOUND)
         endif()
     endif()
 
+    # Rules about DNGConverter
+    if(EXPAT_FOUND)
+        if(CMAKE_USE_PTHREADS_INIT OR CMAKE_USE_WIN32_THREADS_INIT)
+             set(BUILD_DNGCONVERTER TRUE)
+        else()
+             set(BUILD_DNGCONVERTER FALSE)
+        endif()
+    endif()
+
     PRINT_COMPONENT_COMPILE_STATUS("AdvancedSlideshow"  BUILD_VIEWERS)
     PRINT_COMPONENT_COMPILE_STATUS("ImageViewer"        BUILD_VIEWERS)
     PRINT_COMPONENT_COMPILE_STATUS("AcquireImages"      KSANE_FOUND)
-    PRINT_COMPONENT_COMPILE_STATUS("DNGConverter"       EXPAT_FOUND)
+    PRINT_COMPONENT_COMPILE_STATUS("DNGConverter"       BUILD_DNGCONVERTER)
     PRINT_COMPONENT_COMPILE_STATUS("DLNAExport"         (HUPNP_FOUND AND HUPNPAV_FOUND) OR (NOT (HUPNP_FOUND AND HUPNPAV_FOUND) AND QTSOAP_FOUND))
     PRINT_COMPONENT_COMPILE_STATUS("RemoveRedEyes"      OpenCV_FOUND)
     PRINT_COMPONENT_COMPILE_STATUS("Debian Screenshots" QJSON_FOUND)
@@ -436,10 +445,8 @@ if(KIPI_FOUND)
             add_subdirectory(imageviewer)
         endif()
 
-        if(EXPAT_FOUND)
-            if(CMAKE_USE_PTHREADS_INIT OR CMAKE_USE_WIN32_THREADS_INIT)
-                add_subdirectory(dngconverter)
-            endif()
+        if(BUILD_DNGCONVERTER)
+            add_subdirectory(dngconverter)
         endif()
 
         if(KGEOMAP_FOUND)
