Initial port of Piwigo tool to KF5. Compile and link as well. Tool renamed from PiwigoExport to Piwigo to be more generic, in case of import feature will be implemented in the future.
TODO:
- KDE4Support still in use and must be ported to pure KF5
- Factoring must be done with new libkipiplugins API

CCMAIL: shouryasgupta@gmail.com
CCMAIL: aspotashev@gmail.com
CCMAIL: frederic.coiffier@free.com

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -389,7 +389,7 @@ if(KF5Kipi_FOUND)
         add_subdirectory(flickrexport)
         add_subdirectory(smug)
         add_subdirectory(imageshack)
-#         add_subdirectory(piwigoexport)
+        add_subdirectory(piwigo)
 #         add_subdirectory(kioexportimport)
 #         add_subdirectory(rajceexport)
 #
