--- a/piwigo/kipiplugin_piwigoui.rc
+++ b/piwigo/kipiplugin_piwigoui.rc
@@ -1,6 +1,6 @@
 <!DOCTYPE kpartgui SYSTEM "kpartgui.dtd">
 <!-- NOTE: don't forget to increase version ID when this file is modified -->
-<gui version="1" name="kipiplugin_piwigoexport" >
+<gui version="1" name="kipiplugin_piwigo" >
 
     <MenuBar>
 
