Initial port of KIOExportImport tool to KF5. Compile and link as well. Tool renamed from KIOExportImport to RemoteStorage to be more generic.
TODO:
- KDE4Support still in use and must be ported to pure KF5
- Factoring must be done with new libkipiplugins API

CCMAIL: shouryasgupta@gmail.com
CCMAIL: aspotashev@gmail.com

--- a/remotestorage/kipiplugin_remotestorage.desktop.cmake.in
+++ b/remotestorage/kipiplugin_remotestorage.desktop.cmake.in
@@ -1,42 +1,42 @@
 [Desktop Entry]
-UntranslatedGenericName=KioExportImport
-Name=KioExportImport
-Name[ast]=KioExportImport
+UntranslatedGenericName=RemoteStorage
+Name=RemoteStorage
+Name[ast]=RemoteStorage
 Name[bg]=Изнасяне и внасяне през Kio
 Name[bs]=Kio Izvoz Uvoz
 Name[ca]=Exportador/Importador via KIO
 Name[ca@valencia]=Exportador/Importador via KIO
-Name[cs]=KioExportImport
-Name[da]=KioExportImport
-Name[de]=KioExportImport
-Name[el]=KioExportImport
-Name[en_GB]=KioExportImport
-Name[es]=KioExportImport
+Name[cs]=RemoteStorage
+Name[da]=RemoteStorage
+Name[de]=RemoteStorage
+Name[el]=RemoteStorage
+Name[en_GB]=RemoteStorage
+Name[es]=RemoteStorage
 Name[et]=KIO eksport-import
-Name[eu]=KioExportImport
+Name[eu]=RemoteStorage
 Name[fr]=Exportation / Importation vers un module d'entrées / sorties
-Name[ga]=KioExportImport
-Name[gl]=KioExportImport
+Name[ga]=RemoteStorage
+Name[gl]=RemoteStorage
 Name[hu]=Kio exportálás-importálás
-Name[is]=KioExportImport
+Name[is]=RemoteStorage
 Name[it]=Esportazione e importazione con KIO
-Name[km]=KioExportImport
-Name[lv]=KioExportImport
-Name[nb]=KioExportImport
-Name[nl]=KioExportImport
-Name[pa]=KioExportImport
+Name[km]=RemoteStorage
+Name[lv]=RemoteStorage
+Name[nb]=RemoteStorage
+Name[nl]=RemoteStorage
+Name[pa]=RemoteStorage
 Name[pl]=EksportImportZKio
-Name[pt]=KioExportImport
+Name[pt]=RemoteStorage
 Name[pt_BR]=Exportar e importar pelo KIO
 Name[ro]=Export/Import Kio
 Name[ru]=Импорт и экспорт через KIO
 Name[sk]=Kio export a import
-Name[sl]=KioExportImport
+Name[sl]=RemoteStorage
 Name[sv]=Export och import med I/O-slav
-Name[th]=KioExportImport
-Name[tr]=KioExportImport
-Name[uk]=KioExportImport
-Name[x-test]=xxKioExportImportxx
+Name[th]=RemoteStorage
+Name[tr]=RemoteStorage
+Name[uk]=RemoteStorage
+Name[x-test]=xxRemoteStoragexx
 Name[zh_CN]=Kio 导入导出
 Name[zh_TW]=Kio 匯出/匯入
 Comment=A tool to export pictures to or import from a remote directory that is accessible via KIO.
@@ -78,7 +78,7 @@ Comment[zh_TW]=經由 KIO 匯出圖片到遠端可存取的目錄或從遠端可
 Type=Service
 Icon=folder-remote
 ServiceTypes=KIPI/Plugin
-X-KDE-Library=kipiplugin_kioexportimport
+X-KDE-Library=kipiplugin_remotestorage
 X-KIPI-PluginCategories=Export,Import
 X-KIPI-BinaryVersion=${KIPI_LIB_SO_CUR_VERSION}
 author=Johannes Wienke, languitar at semipol dot de
