--- a/remotestorage/CMakeLists.txt
+++ b/remotestorage/CMakeLists.txt
@@ -1,13 +1,15 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
-set(PLUGIN_NAME kipiplugin_kioexportimport)
+set(PLUGIN_NAME kipiplugin_remotestorage)
+
+add_definitions(-DTRANSLATION_DOMAIN=\"${PLUGIN_NAME}\")
 
 set(${PLUGIN_NAME}_PART_SRCS
-    plugin_kioexportimport.cpp
+    plugin_remotestorage.cpp
     KioExportWindow.cpp
     KioExportWidget.cpp
     KioImportWindow.cpp
@@ -17,7 +19,7 @@ set(${PLUGIN_NAME}_PART_SRCS
 add_library(${PLUGIN_NAME} MODULE ${${PLUGIN_NAME}_PART_SRCS})
 
 target_link_libraries(${PLUGIN_NAME}
-                      
+
                       KF5::Kipi
                       KF5::KIOCore
                       KF5kipiplugins
