--- a/PORT.KF5/TODO/gpssync/CMakeLists.txt
+++ b/PORT.KF5/TODO/gpssync/CMakeLists.txt
@@ -1,10 +1,12 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
 subdirs(icons)
+
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_gpssync\")
 
 include_directories(BEFORE "${CMAKE_CURRENT_SOURCE_DIR}/../")
 include_directories(${KGEOMAP_INCLUDE_DIR})
