--- a/vkontakte/CMakeLists.txt
+++ b/vkontakte/CMakeLists.txt
@@ -1,8 +1,10 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
+
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_vkontakte\")
 
 include_directories(${LIBKVKONTAKTE_INCLUDES})
 
