--- a/yandexfotki/CMakeLists.txt
+++ b/yandexfotki/CMakeLists.txt
@@ -1,14 +1,16 @@
 #
-# Copyright (c) 2010-2014, Gilles Caulier, <caulier dot gilles at gmail dot com>
+# Copyright (c) 2010-2015, Gilles Caulier, <caulier dot gilles at gmail dot com>
 #
 # Redistribution and use is allowed according to the terms of the BSD license.
 # For details see the accompanying COPYING-CMAKE-SCRIPTS file.
 
 subdirs(icons)
 
-include_directories(${QCA2_INCLUDE_DIR})
+add_definitions(-DTRANSLATION_DOMAIN=\"kipiplugin_yandexfotki\")
 
-add_definitions(${QCA2_DEFINITIONS})
+include_directories(${Qca-qt5_INCLUDE_DIR})
+
+add_definitions(${Qca-qt5_DEFINITIONS})
 
 set(kipiplugin_yandexfotki_PART_SRCS
     plugin_yandexfotki.cpp
@@ -28,8 +30,8 @@ target_link_libraries(kipiplugin_yandexfotki
                       KF5::KDcraw
                       KF5::Kipi
                       KF5::KExiv2
-                      ${QCA2_LIBRARIES}
-                      
+                      ${Qca-qt5_LIBRARIES}
+
                       KF5::KIOCore
                       KF5kipiplugins
                      )
@@ -38,4 +40,4 @@ configure_file(kipiplugin_yandexfotki.desktop.cmake.in ${CMAKE_CURRENT_BINARY_DI
 
 install(FILES   ${CMAKE_CURRENT_BINARY_DIR}/kipiplugin_yandexfotki.desktop DESTINATION ${SERVICES_INSTALL_DIR})
 install(TARGETS kipiplugin_yandexfotki                                     DESTINATION ${PLUGIN_INSTALL_DIR})
-install(FILES kipiplugin_yandexfotkiui.rc                                  DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
+install(FILES   kipiplugin_yandexfotkiui.rc                                DESTINATION ${KXMLGUI_INSTALL_DIR}/kipi)
